--- a/ui-kit-showcase/src/main/resources/style/custom.scss
+++ b/ui-kit-showcase/src/main/resources/style/custom.scss
@@ -1,3 +1,3 @@
-div[data-style="ShowcaseStyles-showcaseContainer"]:after {
-    content: "Greetings from custom style sheet.";
+div[data-style="ShowcaseStyles-showcaseCopyrightFooter"] span:after {
+    content: "Copyright " attr(data-year) " by linked-planet GmbH";
 }
